--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
   </style>
 </head>
 <body>
-  <div class="slide"><img src="Vehicle_dashboard_app/1.jpg" alt="Screenshot 1" /></div>
-  <div class="slide"><img src="Vehicle_dashboard_app/2.jpg" alt="Screenshot 2" /></div>
-  <div class="slide"><img src="Vehicle_dashboard_app/3.jpg" alt="Screenshot 3" /></div>
-  <div class="slide"><img src="Vehicle_dashboard_app/4.jpg" alt="Screenshot 4" /></div>
-  <div class="slide"><img src="Vehicle_dashboard_app/5.jpg" alt="Screenshot 5" /></div>
-  <div class="slide"><img src="Vehicle_dashboard_app/6.jpg" alt="Screenshot 6" /></div>
-  <div class="slide"><img src="Vehicle_dashboard_app/7.jpg" alt="Screenshot 7" /></div>
+  <div class="slide"><img src="vehicle_dashboard_app/1.jpg" alt="Screenshot 1" /></div>
+  <div class="slide"><img src="vehicle_dashboard_app/2.jpg" alt="Screenshot 2" /></div>
+  <div class="slide"><img src="vehicle_dashboard_app/3.jpg" alt="Screenshot 3" /></div>
+  <div class="slide"><img src="vehicle_dashboard_app/4.jpg" alt="Screenshot 4" /></div>
+  <div class="slide"><img src="vehicle_dashboard_app/5.jpg" alt="Screenshot 5" /></div>
+  <div class="slide"><img src="vehicle_dashboard_app/6.jpg" alt="Screenshot 6" /></div>
+  <div class="slide"><img src="vehicle_dashboard_app/7.jpg" alt="Screenshot 7" /></div>
 </body>
 </html>
