--- a/index.html
+++ b/index.html
@@ -11,22 +11,23 @@
       box-sizing: border-box;
     }
 
-    body, html {
-      height: 100%;
-      overflow-x: hidden;
-      scroll-behavior: smooth;
+    body {
+      background: #000;
+      color: #fff;
+      font-family: sans-serif;
     }
 
-    .slide {
-      height: 100vh;
-      width: 100vw;
-      overflow: hidden;
+    .image-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 1px; /* slight space between images */
     }
 
-    .slide img {
-      height: 100%;
+    .image-container img {
       width: 100%;
-      object-fit: cover;
+      height: auto;
+      object-fit: contain;
       display: block;
     }
   </style>
