--- a/index.html
+++ b/index.html
@@ -11,24 +11,29 @@
       box-sizing: border-box;
     }
 
-    body {
-      background: #000;
-      color: #fff;
-      font-family: sans-serif;
+    body, html {
+      height: 100%;
+      overflow-x: hidden;
+      scroll-behavior: smooth;
     }
 
-    .image-container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 1px; /* slight space between images */
+    .slide {
+      height: 100vh;
+      width: 100vw;
+      overflow: hidden;
     }
 
-    .image-container img {
+    .slide {
+      width: 100%;
+      max-width: 100%;
+      overflow: hidden;
+    }
+
+    .slide img {
       width: 100%;
       height: auto;
-      object-fit: contain;
       display: block;
+      object-fit: contain;
     }
   </style>
 </head>
