--- a/index.html
+++ b/index.html
@@ -12,21 +12,17 @@
     }
 
     body, html {
-      height: 100%;
+      width: 100%;
       overflow-x: hidden;
       scroll-behavior: smooth;
-    }
-
-    .slide {
-      height: 100vh;
-      width: 100vw;
-      overflow: hidden;
+      font-family: sans-serif;
     }
 
     .slide {
       width: 100%;
       max-width: 100%;
       overflow: hidden;
+      margin-bottom: 10px; /* spacing between images */
     }
 
     .slide img {
@@ -42,8 +38,6 @@
   <div class="slide"><img src="vehicle_dashboard_app/2.jpg" alt="Screenshot 2" /></div>
   <div class="slide"><img src="vehicle_dashboard_app/3.jpg" alt="Screenshot 3" /></div>
   <div class="slide"><img src="vehicle_dashboard_app/4.jpg" alt="Screenshot 4" /></div>
-  <div class="slide"><img src="vehicle_dashboard_app/5.jpg" alt="Screenshot 5" /></div>
-  <div class="slide"><img src="vehicle_dashboard_app/6.jpg" alt="Screenshot 6" /></div>
-  <div class="slide"><img src="vehicle_dashboard_app/7.jpg" alt="Screenshot 7" /></div>
+  <div class="slide"><img src="vehicle_dashboard_appp/5.jpg" alt="Screenshot 5" /></div>
 </body>
 </html>
