--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
   <div class="slide"><img src="vehicle_dashboard_app/2.jpg" alt="Screenshot 2" /></div>
   <div class="slide"><img src="vehicle_dashboard_app/3.jpg" alt="Screenshot 3" /></div>
   <div class="slide"><img src="vehicle_dashboard_app/4.jpg" alt="Screenshot 4" /></div>
-  <div class="slide"><img src="vehicle_dashboard_appp/5.jpg" alt="Screenshot 5" /></div>
+  <div class="slide"><img src="vehicle_dashboard_app/5.jpg" alt="Screenshot 5" /></div>
+  <div class="slide"><img src="vehicle_dashboard_app/6.jpg" alt="Screenshot 6" /></div>
+  <div class="slide"><img src="vehicle_dashboard_app/7.jpg" alt="Screenshot 7" /></div>
 </body>
 </html>
